# Hexi

./: CMakeLists.txt
cmake/: hexi-config.cmake.in
include/: CMakeLists.txt
